manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-hw2-deploy
  namespace: default
  labels:
    app: otus-hw2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-hw2
  template:
    metadata:
      labels:
        app: otus-hw2
    spec:
      containers:
        - name: otus-hw2
          image: buhhu8/otus1:latest
          ports:
          - containerPort: 8000
